# devpacks-site

./: .gitignore  LICENSE  cabal.project  cabal.project.local  devpacks-site.cabal  devpacks.toml  makefile.ci  package.json  weeder.toml
.github/workflows/: check.yml  deploy.yml
scripts/: build.sh  cabal_fmt.sh  cabal_fmt_check.sh  clean.sh  js_beautify.sh  js_beautify_check.sh  npm_install.sh  ormolu.sh  ormolu_check.sh  prettier.sh  prettier_check.sh  weeder.sh
src/: Site.hs
src-exe/: site.hs
templates/: default.html
