cabal-version: 3.0
name:          devpacks-site
version:       0.1.0.0
synopsis:      Website for Devpacks project
homepage:      https://www.devpacks.org
license:       MIT
license-file:  LICENSE
author:        Devpacks Authors
category:      Web
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings

  -- cabal-fmt: expand src
  exposed-modules:  Site
  build-depends:
    , base    >=4        && <5
    , hakyll  ==4.16.5.0

  hs-source-dirs:   src
  default-language: Haskell2010

executable site
  import:           warnings
  main-is:          site.hs

  -- cabal-fmt: expand src-exe
  other-modules:
  build-depends:
    , base           >=4 && <5
    , devpacks-site

  hs-source-dirs:   src-exe
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
